--- a/sms/appsettings.json
+++ b/sms/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-1TO0V7A\\SQLEXPRESS;Initial Catalog=StudentDB;Integrated Security=True"
+  },
+
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
   }
 }
